@@ -13,6 +13,8 @@ package org.dellroad.hl7;
 @SuppressWarnings("serial")
 public class HL7ContentException extends Exception {
 
+    private String content;
+
     public HL7ContentException() {
     }
 
@@ -26,6 +28,23 @@ public class HL7ContentException extends Exception {
 
     public HL7ContentException(Throwable cause) {
         super(cause);
+    }
+
+    /**
+     * Get the offending content.
+     *
+     * @return offending text, or {@code null} if none was associated with this instance
+     */
+    public String getContent() {
+        return this.content;
+    }
+
+    /**
+     * Record the offending text.
+     */
+    public HL7ContentException setContent(String content) {
+        this.content = content;
+        return this;
     }
 }
 
