@@ -7,12 +7,14 @@
 
 package org.dellroad.hl7.llp;
 
+import java.nio.charset.Charset;
+
 /**
  * HL7 LLP framing constants.
  */
 public interface LLPConstants {
 
-    String CHARACTER_ENCODING = "ISO-8859-1";
+    Charset CHARACTER_ENCODING = Charset.forName("ISO-8859-1");
 
     int LEADING_BYTE = 0x0b;
     int TRAILING_BYTE_0 = 0x1c;
